--- a/frontend/src/views/shopping_list/shopping_list.module.css
+++ b/frontend/src/views/shopping_list/shopping_list.module.css
@@ -19,6 +19,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  min-width: 0;
 }
 
 .add_list {
